--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -1,44 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная страница</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-<body>
+{% extends 'catalog/base.html' %}
 
-<div class="container">
-    <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-light  p-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/"><b>MRROBOT</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Главная</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Контакты</a>
-                        </li>
-
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Поиск</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
-<hr>
+{% block content %}
 <div class="row">
     <h2 class="text-center mt-3 mb-5">КОНТАКТЫ MRROBOT</h2>
 </div>
@@ -88,15 +50,17 @@
                 </div>
                 <div class="card-body">
                     <blockquote class="blockquote mb-0">
+                        {% for object in object_list %}
                         <p>Мы всегда на связи! Свяжитесь с нами, чтобы обсудить ваш проект,
                             задать вопросы или получить консультацию. Мы ценим каждого клиента и гарантируем оперативные
                             ответы на все ваши запросы. Наша дружелюбная команда с радостью поможет вам найти решение,
                             которое наилучшим образом соответствует вашим потребностям. Ваши успехи - наш приоритет,
                             и мы будем рады сотрудничеству!<br><br>
-                            <b>ТЕЛЕФОН:</b> 8 888 888 8888<br>
-                            <b>EMAIL:</b> mrrobot@yandex.ru<br>
-                            <b>ФИО:</b> ИМЯ ФАМИЛИЯ ОТЧЕСТВО</p>
+                            <b>ТЕЛЕФОН:</b> {{ object.phone }} <br>
+                            <b>EMAIL:</b> {{ object.email }}<br>
+                            <b>ФИО:</b> {{ object.fullname }}</p>
                         <br>
+                        {% endfor %}
                         <footer class="blockquote-footer">Так же Вы можете заполнить форму снизу для
                             связи со мной
                         </footer>
@@ -132,70 +96,5 @@
             </form>
         </div>
     </div>
-
 </div>
-<div class="row">
-    <footer class="text-center text-lg-start bg-white text-muted">
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <div>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="me-4 link-secondary">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-        </section>
-
-        <div class="container text-center text-md-start mt-5">
-
-            <div class="row mt-3">
-
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3 text-secondary"></i>MRROBOT
-                    </h6>
-                    <p>
-                        Мы творим онлайн успех для вашего бизнеса: создаем сайты,
-                        дизайны логотипов и мобильные приложения.
-                    </p>
-                </div>
-
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Магазин
-                    </h6>
-                    <p>
-                        <a href="/" class="text-reset">Главная</a>
-                    </p>
-                    <p>
-                        <a href="/contacts" class="text-reset">Контакты</a>
-                    </p>
-
-                </div>
-
-            </div>
-
-            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-                © 2021 Copyright:
-                <a class="text-reset fw-bold" href="/">MRROBOT</a>
-            </div>
-        </div>
-    </footer>
-</div>
-</body>
-</html>
+{% endblock %}
