--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -10,6 +10,8 @@
         <div class="col-6">
             <h1>{{ object.name }}</h1>
             <p>{{ object.description }}</p>
+            <p>Цена: <b>{{ object.price }} руб.</b></p>
+            <p>Дата публикации: <b>{{ object.created_at }}</b></p>
         </div>
     </div>
 </div>
