added a new button that redirects to blog-page

--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -18,6 +18,10 @@
                             <a class="nav-link" href="{% url 'catalog:contacts' %}">Контакты</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'blog:view' %}">Блог</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link text-black-50" href="{% url 'catalog:admin_panel' %}">Админка</a>
                         </li>
 
