--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -22,7 +22,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-black-50" href="{% url 'catalog:admin_panel' %}">Админка</a>
+                            <a class="nav-link text-black-50" href="{% url 'catalog:product_create' %}">Добавить продукт</a>
                         </li>
 
                     </ul>
