--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -13,9 +13,11 @@
 <div class="container">
     <div class="row">
         <div class="col-10"></div>
-        <div class="col-2">
-            <a class="btn btn-success" href="{% url 'blog:create' %}">ДОБАВИТЬ СТАТЬЮ</a>
-        </div>
+        {% if user.is_authenticated %}
+            <div class="col-2">
+                <a class="btn btn-success" href="{% url 'blog:create' %}">ДОБАВИТЬ СТАТЬЮ</a>
+            </div>
+        {% endif %}
     </div>
 </div>
 <div class="container ">
@@ -36,15 +38,17 @@
                         <p><b>Дата публикации: </b>{{ object.created_at }}</p>
                     </div>
                 </div>
-                <div class="row p-2">
-                    <div class="col-9"></div>
-                    <div class="col-2">
-                        <a class="btn btn-info" href="{% url 'blog:update' object.pk %}">ОБНОВИТЬ</a>
+                {% if user.is_authenticated %}
+                    <div class="row p-2">
+                        <div class="col-9"></div>
+                        <div class="col-2">
+                            <a class="btn btn-info" href="{% url 'blog:update' object.pk %}">ОБНОВИТЬ</a>
+                        </div>
+                        <div class="col-1">
+                            <a class = "btn btn-danger" href="{% url 'blog:delete' object.pk %}">УДАЛИТЬ</a>
+                        </div>
                     </div>
-                    <div class="col-1">
-                        <a class = "btn btn-danger" href="{% url 'blog:delete' object.pk %}">УДАЛИТЬ</a>
-                    </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </div>
