--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -20,11 +20,24 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'blog:view' %}">Блог</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-black-50" href="{% url 'catalog:product_create' %}">Добавить продукт</a>
-                        </li>
-
+                        {% if not user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link text-black-50" href="{% url 'users:register' %}">Создать аккаунт</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black-50" href="{% url 'users:login' %}">Войти</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link text-black-50" href="{% url 'catalog:product_create' %}">Добавить продукт</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black-50" href="{% url 'users:profile' %}">Профиль</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black-50" href="{% url 'users:logout' %}">Выйти</a>
+                            </li>
+                        {% endif %}
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Search">
