added seller in product description

--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -15,6 +15,7 @@
             {% if version %}
                 <p>Название версии: <b>{{ version.name }}</b></p>
             {% endif %}
+            <p>Продавец: <b>{{ object.user }}</b></p>
         </div>
     </div>
 </div>
