--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -7,52 +7,66 @@
 </div>
 <div class="container">
     <div class="row">
+        {% if user|has_group:"product_moderator" %}
+            <h1 class="text-center">НА МОДЕРАЦИИ</h1>
+            <div class="container">
+                <div class="row">
+                    {% for object in object_list %}
+                        {% if not object.is_published and user|has_group:"product_moderator" %}
+                            <div class="col-3 mt-3">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="{{ object.preview|mediapath }}" class="card-img-top" alt="...">
+                                    <div class="card-body bg-light">
+                                        <h5 class="card-title">{{ object.name|upper|slice:":25" }}...</h5>
+                                        <p class="card-text text-muted">{{ object.description|slice:":100" }}...</p>
+                                        <hr>
+                                        <a href="{% url 'catalog:product_update' object.pk %}"
+                                           class="btn btn-outline-primary">Просмотреть</a>
+                                        <a href="{% url 'catalog:product_delete' object.pk %}"
+                                       class="btn btn-outline-danger">Удалить</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <h1 class="text-center mt-5">АКТИВНЫЕ</h1>
+            </div>
+        {% endif %}
         {% for object in object_list %}
-            {% if object.version_set.all %}
-                {% for version in object.version_set.all %}
+            {% if object.is_published %}
+                {% if object.version_set.all %}
+                    {% for version in object.version_set.all %}
+                        <div class="col-3 mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="{{ object.preview|mediapath }}" class="card-img-top" alt="...">
+                                <div class="card-body bg-light">
+                                    <h5 class="card-title">{{ object.name|upper|slice:":25" }}...</h5>
+                                    <p class="card-text">{{ object.description|slice:":100" }}...</p>
+                                    <a href="{% url 'catalog:product_detail' object.pk version.pk%}" class="btn btn-success">ПЕРЕЙТИ</a>
+                                    <hr>
+                                    <div style="display: flex; justify-content: space-between;">
+                                        <p><b>версия</b>: {{ version.number }}</p>
+                                        {% if version.is_current %}
+                                        <p class="text-success">ПОСЛЕДНЯЯ</p>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
                     <div class="col-3 mt-3">
                         <div class="card" style="width: 18rem;">
                             <img src="{{ object.preview|mediapath }}" class="card-img-top" alt="...">
                             <div class="card-body bg-light">
                                 <h5 class="card-title">{{ object.name|upper|slice:":25" }}...</h5>
                                 <p class="card-text">{{ object.description|slice:":100" }}...</p>
-                                <a href="{% url 'catalog:product_detail' object.pk version.pk%}" class="btn btn-success">ПЕРЕЙТИ</a>
-                                <hr>
-                                <div style="display: flex; justify-content: space-between;">
-                                    <p><b>версия</b>: {{ version.number }}</p>
-                                    {% if version.is_current %}
-                                        <p class="text-success">ПОСЛЕДНЯЯ</p>
-                                    {% endif %}
-                                </div>
-                                {% if user.is_authenticated %}
-                                    <hr>
-                                    <a href="{% url 'catalog:product_update' object.pk %}"
-                                       class="btn btn-outline-primary">Обновить</a>
-                                    <a href="{% url 'catalog:product_delete' object.pk %}"
-                                       class="btn btn-outline-danger">Удалить</a>
-                                {% endif %}
+                                <a href="{% url 'catalog:product_detail' object.pk 0 %}" class="btn btn-success">ПЕРЕЙТИ</a>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
-            {% else %}
-                <div class="col-3 mt-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{ object.preview|mediapath }}" class="card-img-top" alt="...">
-                        <div class="card-body bg-light">
-                            <h5 class="card-title">{{ object.name|upper|slice:":25" }}...</h5>
-                            <p class="card-text">{{ object.description|slice:":100" }}...</p>
-                            <a href="{% url 'catalog:product_detail' object.pk 0 %}" class="btn btn-success">ПЕРЕЙТИ</a>
-                            {% if user.is_authenticated %}
-                                <hr>
-                                <a href="{% url 'catalog:product_update' object.pk %}"
-                                   class="btn btn-outline-primary">Обновить</a>
-                                <a href="{% url 'catalog:product_delete' object.pk %}"
-                                   class="btn btn-outline-danger">Удалить</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
+                {% endif %}
             {% endif %}
         {% endfor %}
     </div>
