--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-6">
             <h1>{{ object.title }}</h1>
-            <div class="card">
+            <div class="card p-3">
                 <p>{{ object.body }}</p>
             </div>
         </div>
