--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container mt-4">
@@ -15,7 +16,7 @@
         <div class="col-4">
             <form class='card p-3 bg-white' method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 <button type="submit" class="btn btn-primary mt-5">
                     {% if object %}
                     ОБНОВИТЬ
