--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col-10"></div>
-        {% if user.is_authenticated %}
+        {% if user|has_group:"blog_manager" %}
             <div class="col-2">
                 <a class="btn btn-success" href="{% url 'blog:create' %}">ДОБАВИТЬ СТАТЬЮ</a>
             </div>
@@ -21,37 +21,76 @@
     </div>
 </div>
 <div class="container ">
+    {% if user|has_group:"blog_manager" %}
+        <h1>НЕВЫПУЩЕННЫЕ</h1>
+        {% for object in object_list %}
+            {% if not object.is_published %}
+                <div class="row">
+                    <div class="card mb-3 mt-3" style="max-width: 1500px;">
+                        <div class="row g-0">
+                            <div class="col-md-3">
+                                <img src="{{ object.preview|mediapath }}" class="img-fluid rounded-start p-2" alt="...">
+                            </div>
+                            <div class="col-9">
+                                <div class="card-body">
+                                    <h5 class="card-title text-muted">{{ object.title|upper }}</h5>
+                                    <p class="card-text text-muted">
+                                        {{ object.body|slice:"500" }}...
+                                        <a class="text-muted" href="{% url 'blog:article' object.pk %}">читать далее...</a>
+                                    </p>
+                                    <p class="text-muted"><b>Дата публикации: </b>{{ object.created_at }}</p>
+                                </div>
+                            </div>
+                            <div class="row p-2">
+                                <div class="col-9"></div>
+                                <div class="col-2">
+                                    <a class="btn btn-secondary" href="{% url 'blog:update' object.pk %}">ОБНОВИТЬ</a>
+                                </div>
+                                <div class="col-1">
+                                    <a class = "btn btn-secondary" href="{% url 'blog:delete' object.pk %}">УДАЛИТЬ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+        <hr>
+    <h1>АКТИВНЫЕ</h1>
+    {% endif %}
     {% for object in object_list %}
-    <div class="row">
-        <div class="card mb-3 mt-3" style="max-width: 1500px;">
-            <div class="row g-0">
-                <div class="col-md-3">
-                    <img src="{{ object.preview|mediapath }}" class="img-fluid rounded-start p-2" alt="...">
-                </div>
-                <div class="col-9">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ object.title|upper }}</h5>
-                        <p class="card-text">
-                            {{ object.body|slice:"500" }}...
-                            <a href="{% url 'blog:article' object.pk %}">читать далее...</a>
-                        </p>
-                        <p><b>Дата публикации: </b>{{ object.created_at }}</p>
+        {% if object.is_published %}
+            <div class="row">
+                <div class="card mb-3 mt-3" style="max-width: 1500px;">
+                    <div class="row g-0">
+                        <div class="col-md-3">
+                            <img src="{{ object.preview|mediapath }}" class="img-fluid rounded-start p-2" alt="...">
+                        </div>
+                        <div class="col-9">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ object.title|upper }}</h5>
+                                <p class="card-text">
+                                    {{ object.body|slice:"500" }}...
+                                    <a href="{% url 'blog:article' object.pk %}">читать далее...</a>
+                                </p>
+                                <p><b>Дата публикации: </b>{{ object.created_at }}</p>
+                            </div>
+                        </div>
+                        {% if user|has_group:"blog_manager" %}
+                            <div class="row p-2">
+                                <div class="col-9"></div>
+                                <div class="col-2">
+                                    <a class="btn btn-primary" href="{% url 'blog:update' object.pk %}">ОБНОВИТЬ</a>
+                                </div>
+                                <div class="col-1">
+                                    <a class="btn btn-danger" href="{% url 'blog:delete' object.pk %}">УДАЛИТЬ</a>
+                                </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
-                {% if user.is_authenticated %}
-                    <div class="row p-2">
-                        <div class="col-9"></div>
-                        <div class="col-2">
-                            <a class="btn btn-info" href="{% url 'blog:update' object.pk %}">ОБНОВИТЬ</a>
-                        </div>
-                        <div class="col-1">
-                            <a class = "btn btn-danger" href="{% url 'blog:delete' object.pk %}">УДАЛИТЬ</a>
-                        </div>
-                    </div>
-                {% endif %}
             </div>
-        </div>
-    </div>
+        {% endif %}
     {% endfor %}
 </div>
 {% endblock %}
