added year in footer

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-                ©
+                © {% now 'Y' %}
                 <a class="text-reset fw-bold" href="/">MRROBOT</a>
             </div>
         </div>
